--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -6,7 +6,6 @@
     <title>Homepage with Cards</title>
 
     <style>
-        /* ---- NAVBAR ---- */
         body {
             margin: 0;
             font-family: Arial, Helvetica, sans-serif;
@@ -50,7 +49,6 @@
             color: #ffcc00;
         }
 
-        /* ---- CARD LAYOUT ---- */
         .container {
             width: 90%;
             margin: 40px auto;
@@ -83,54 +81,31 @@
 </head>
 <body>
 
-    <!-- NAVBAR -->
-    <div class="navbar">
-        <div class="logo">My Website</div>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="/createform">Add blog</a></li>
-            <li><a href="#">About</a></li>
-        </ul>
-    </div>
+<!-- NAVBAR -->
+<div class="navbar">
+    <div class="logo">My Website</div>
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="/createform">Add blog</a></li>
+        <li><a href="#">About</a></li>
+    </ul>
+</div>
 
-    <!-- CARD SECTION -->
-    <div class="container">
+<!-- CARD SECTION -->
+<div class="container">
 
-        <div class="card">
-            <h2>Card Title 1</h2>
-            <h3>Subtitle goes here</h3>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                Doloribus, magnam repellat! 
-            </p>
-        </div>
+    <% for (let i = 0; i < blogs.length; i++) { 
+        let blog = blogs[i]; %>
 
         <div class="card">
-            <h2>Card Title 2</h2>
-            <h3>Subtitle example</h3>
-            <p>
-                This is a sample description for the second card. 
-                Clean and simple UI layout.
-            </p>
+            <h2><%= blog.title %></h2>
+            <h3><%= blog.subTitle %></h3>
+            <p><%= blog.description %></p>
         </div>
 
-        <div class="card">
-            <h2>Card Title 3</h2>
-            <h3>Small subtitle</h3>
-            <p>
-                Cards are responsive and automatically adjust based on screen width.
-            </p>
-        </div>
+    <% } %>
 
-        <div class="card">
-            <h2>Card Title 4</h2>
-            <h3>Another subtitle</h3>
-            <p>
-                You can add unlimited cards using the same pattern.
-            </p>
-        </div>
-
-    </div>
+</div>
 
 </body>
 </html>
