showed database datas to homepage

--- a/views/createform.ejs
+++ b/views/createform.ejs
@@ -82,7 +82,7 @@
 
     <!-- NAVIGATION BAR -->
     <div class="navbar">
-        <a href="index.html">Home</a>
+        <a href="/">Home</a>
         <a href="form.html">Form Page</a>
         <a href="#">About</a>
     </div>
